# http-protocol

./: LICENSE  README.md  setup.cfg
src/: main.py
src/toy_http/: entities.py  messages.py  server.py
