[metadata]
name = http-protocol-TheRealJoe24
version = 0.0.1
author = Brandon Stevens
author_email = owner@therealjoe24.com
description = A toy implementation of the http protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheRealJoe24/http-protocol
project_urls = 
    Bug Tracker = https://github.com/TheRealJoe24/http-protocol/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
